Fix Honk font gradient not rendering on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -196,6 +196,7 @@ header {
 	font-size: 3.5em;
 	font-weight: 700;
 	font-family: "Honk", sans-serif;
+	color: unset;
 }
 .home-link:link:not(:hover) {
 	text-decoration: none;
